Switch to my fork of lib-musl

--- a/.gitmodules
+++ b/.gitmodules
@@ -3,7 +3,7 @@
 	url = https://github.com/unikraft/unikraft
 [submodule "lib/lib-musl"]
 	path = lib/lib-musl
-	url = https://github.com/unikraft/lib-musl
+	url = https://github.com/extinctpotato/unikraft-lib-musl.git 
 [submodule "lib/lib-lwip"]
 	path = lib/lib-lwip
 	url = https://github.com/unikraft/lib-lwip
