lib-dropbear: build `.c`, not `.o`

--- a/lib/lib-dropbear/Makefile.uk
+++ b/lib/lib-dropbear/Makefile.uk
@@ -36,7 +36,7 @@ LIBDROPBEAR_CFLAGS-y +=  $(LIBDROPBEAR_FLAGS_SUPPRESS)
 
 CINCLUDES-y += -I$(LIBDROPBEAR_BASE)/include
 
-LIBDROPBEAR_SRCS-y += $(LIBDROPBEAR_SRC)/dbutil.o
+LIBDROPBEAR_SRCS-y += $(LIBDROPBEAR_SRC)/dbutil.c
 LIBDROPBEAR_SRCS-y += $(LIBDROPBEAR_SRC)/buffer.c
 LIBDROPBEAR_SRCS-y += $(LIBDROPBEAR_SRC)/dbhelpers.c
 LIBDROPBEAR_SRCS-y += $(LIBDROPBEAR_SRC)/dss.c
@@ -62,18 +62,18 @@ LIBDROPBEAR_SRCS-y += $(LIBDROPBEAR_SRC)/gendss.c
 LIBDROPBEAR_SRCS-y += $(LIBDROPBEAR_SRC)/genrsa.c
 LIBDROPBEAR_SRCS-y += $(LIBDROPBEAR_SRC)/gened25519.c
 
-LIBDROPBEAR_SRCS-y += $(LIBDROPBEAR_SRC)/svr-kex.o
-LIBDROPBEAR_SRCS-y += $(LIBDROPBEAR_SRC)/svr-auth.o
-LIBDROPBEAR_SRCS-y += $(LIBDROPBEAR_SRC)/sshpty.o
-LIBDROPBEAR_SRCS-y += $(LIBDROPBEAR_SRC)/svr-authpasswd.o
-LIBDROPBEAR_SRCS-y += $(LIBDROPBEAR_SRC)/svr-authpubkey.o 
-LIBDROPBEAR_SRCS-y += $(LIBDROPBEAR_SRC)/svr-authpubkeyoptions.o 
-LIBDROPBEAR_SRCS-y += $(LIBDROPBEAR_SRC)/svr-session.o 
-LIBDROPBEAR_SRCS-y += $(LIBDROPBEAR_SRC)/svr-service.o
-LIBDROPBEAR_SRCS-y += $(LIBDROPBEAR_SRC)/svr-chansession.o 
-LIBDROPBEAR_SRCS-y += $(LIBDROPBEAR_SRC)/svr-runopts.o 
-LIBDROPBEAR_SRCS-y += $(LIBDROPBEAR_SRC)/svr-agentfwd.o 
-LIBDROPBEAR_SRCS-y += $(LIBDROPBEAR_SRC)/svr-main.o 
-LIBDROPBEAR_SRCS-y += $(LIBDROPBEAR_SRC)/svr-x11fwd.o
-LIBDROPBEAR_SRCS-y += $(LIBDROPBEAR_SRC)/svr-tcpfwd.o 
-LIBDROPBEAR_SRCS-y += $(LIBDROPBEAR_SRC)/svr-authpam.o
+LIBDROPBEAR_SRCS-y += $(LIBDROPBEAR_SRC)/svr-kex.c
+LIBDROPBEAR_SRCS-y += $(LIBDROPBEAR_SRC)/svr-auth.c
+LIBDROPBEAR_SRCS-y += $(LIBDROPBEAR_SRC)/sshpty.c
+LIBDROPBEAR_SRCS-y += $(LIBDROPBEAR_SRC)/svr-authpasswd.c
+LIBDROPBEAR_SRCS-y += $(LIBDROPBEAR_SRC)/svr-authpubkey.c 
+LIBDROPBEAR_SRCS-y += $(LIBDROPBEAR_SRC)/svr-authpubkeyoptions.c
+LIBDROPBEAR_SRCS-y += $(LIBDROPBEAR_SRC)/svr-session.c
+LIBDROPBEAR_SRCS-y += $(LIBDROPBEAR_SRC)/svr-service.c
+LIBDROPBEAR_SRCS-y += $(LIBDROPBEAR_SRC)/svr-chansession.c
+LIBDROPBEAR_SRCS-y += $(LIBDROPBEAR_SRC)/svr-runopts.c
+LIBDROPBEAR_SRCS-y += $(LIBDROPBEAR_SRC)/svr-agentfwd.c
+LIBDROPBEAR_SRCS-y += $(LIBDROPBEAR_SRC)/svr-main.c
+LIBDROPBEAR_SRCS-y += $(LIBDROPBEAR_SRC)/svr-x11fwd.c
+LIBDROPBEAR_SRCS-y += $(LIBDROPBEAR_SRC)/svr-tcpfwd.c
+LIBDROPBEAR_SRCS-y += $(LIBDROPBEAR_SRC)/svr-authpam.c
