lib-dropbear: include headers

--- a/lib/lib-dropbear/Makefile.uk
+++ b/lib/lib-dropbear/Makefile.uk
@@ -35,6 +35,8 @@ LIBDROPBEAR_CFLAGS-y +=  $(LIBDROPBEAR_FLAGS)
 LIBDROPBEAR_CFLAGS-y +=  $(LIBDROPBEAR_FLAGS_SUPPRESS)
 
 CINCLUDES-y += -I$(LIBDROPBEAR_BASE)/include
+CINCLUDES-y += -I$(LIBDROPBEAR_SRC)
+CINCLUDES-y += -I$(LIBDROPBEAR_SRC)/libtomcrypt/src/headers
 
 LIBDROPBEAR_SRCS-y += $(LIBDROPBEAR_SRC)/dbutil.c
 LIBDROPBEAR_SRCS-y += $(LIBDROPBEAR_SRC)/buffer.c
