lib-dropbear: add missing common files

--- a/lib/lib-dropbear/Makefile.uk
+++ b/lib/lib-dropbear/Makefile.uk
@@ -655,3 +655,23 @@ LIBDROPBEAR_SRCS-y += $(LIBDROPBEAR_SRC)/svr-main.c
 LIBDROPBEAR_SRCS-y += $(LIBDROPBEAR_SRC)/svr-x11fwd.c
 LIBDROPBEAR_SRCS-y += $(LIBDROPBEAR_SRC)/svr-tcpfwd.c
 LIBDROPBEAR_SRCS-y += $(LIBDROPBEAR_SRC)/svr-authpam.c
+
+LIBDROPBEAR_SRCS-y += $(LIBDROPBEAR_SRC)/common-algo.c
+LIBDROPBEAR_SRCS-y += $(LIBDROPBEAR_SRC)/common-channel.c
+LIBDROPBEAR_SRCS-y += $(LIBDROPBEAR_SRC)/common-chansession.c
+LIBDROPBEAR_SRCS-y += $(LIBDROPBEAR_SRC)/common-kex.c
+LIBDROPBEAR_SRCS-y += $(LIBDROPBEAR_SRC)/common-runopts.c
+LIBDROPBEAR_SRCS-y += $(LIBDROPBEAR_SRC)/common-session.c
+
+LIBDROPBEAR_SRCS-y += $(LIBDROPBEAR_SRC)/packet.c
+LIBDROPBEAR_SRCS-y += $(LIBDROPBEAR_SRC)/termcodes.c
+LIBDROPBEAR_SRCS-y += $(LIBDROPBEAR_SRC)/loginrec.c
+LIBDROPBEAR_SRCS-y += $(LIBDROPBEAR_SRC)/tcp-accept.c
+LIBDROPBEAR_SRCS-y += $(LIBDROPBEAR_SRC)/listener.c
+LIBDROPBEAR_SRCS-y += $(LIBDROPBEAR_SRC)/process-packet.c
+LIBDROPBEAR_SRCS-y += $(LIBDROPBEAR_SRC)/dh_groups.c
+LIBDROPBEAR_SRCS-y += $(LIBDROPBEAR_SRC)/circbuffer.c
+LIBDROPBEAR_SRCS-y += $(LIBDROPBEAR_SRC)/list.c
+LIBDROPBEAR_SRCS-y += $(LIBDROPBEAR_SRC)/netio.c
+LIBDROPBEAR_SRCS-y += $(LIBDROPBEAR_SRC)/chachapoly.c
+LIBDROPBEAR_SRCS-y += $(LIBDROPBEAR_SRC)/gcm.c
