--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,3 +13,6 @@ jobs:
       - run: pwd && ls -alh
       - run: UK_DEFCONFIG=$(pwd)/defconfigs/qemu-x86_64 make defconfig
       - run: make
+      - uses: actions/upload-artifact@v3
+        with:
+          path: build/unikraft-dropbear_qemu-x86_64
