lib-dropbear: flatten _FLAGS with _CFLAGS
Apparently _FLAGS variables are only interpreted for individual source
files rather than the whole codebase.
The evidence for that lies in `unikraft/support/build/Makefile.rules`.
Let's take a look at two lines from the definition of `buildrule_c`:

* `$$($(call vprefix_lib,$(1),CFLAGS)) $$($(call vprefix_lib,$(1),CFLAGS-y))`
* `$$($(call vprefix_src,$(1),$(2),$(3),FLAGS)) $$($(callvprefix_src,$(1),$(2),$(3),FLAGS-y))`

Clearly, `CFLAGS`-suffixed variables are "fished out" for the library prefix
(e.g. `LIBDROPBEAR` in our case) while `FLAGS`-suffixed variables are
interpreted for source file variables (which are in the following
format: LIBNAME_FILENAME_[VARIANT_]VARNAME).

--- a/lib/lib-dropbear/Makefile.uk
+++ b/lib/lib-dropbear/Makefile.uk
@@ -27,11 +27,10 @@ LIBDROPBEAR_SRCS-y += $(LIBDROPBEAR_BASE)/main.c|unikraft
 ################################################################################
 # Flags
 ################################################################################
-LIBDROPBEAR_FLAGS = -DDROPBEAR_SERVER
 LIBDROPBEAR_SVR-MAIN_FLAGS = -Dmain=custom_dropbear_main
 LIBDROPBEAR_DROPBEARKEY_FLAGS = -Dmain=dropbearkey_main
 
-LIBDROPBEAR_CFLAGS-y +=  $(LIBDROPBEAR_FLAGS)
+LIBDROPBEAR_CFLAGS-y += -DDROPBEAR_SERVER 
 LIBDROPBEAR_TOMCRYPT_CFLAGS-y += -DLTC_SOURCE
 
 CINCLUDES-y += -I$(LIBDROPBEAR_BASE)/include
