lib-dropbear: refactor includes

--- a/lib/lib-dropbear/Makefile.uk
+++ b/lib/lib-dropbear/Makefile.uk
@@ -41,13 +41,10 @@ CINCLUDES-y += -I$(LIBDROPBEAR_BASE)/include
 LIBDROPBEAR_CINCLUDES-y += -I$(LIBDROPBEAR_SRC)
 LIBDROPBEAR_CINCLUDES-y += -I$(LIBDROPBEAR_SRC)/libtomcrypt/src/headers
 
+LIBDROPBEAR_TOMMATH_CINCLUDES-y += $(LIBDROPBEAR_CINCLUDES-y)
 LIBDROPBEAR_TOMMATH_CINCLUDES-y += -I$(LIBDROPBEAR_SRC)/libtommath
-LIBDROPBEAR_TOMMATH_CINCLUDES-y += -I$(LIBDROPBEAR_SRC)/libtomcrypt/src/headers
-LIBDROPBEAR_TOMMATH_CINCLUDES-y += -I$(LIBDROPBEAR_SRC)
 
-LIBDROPBEAR_TOMCRYPT_CINCLUDES-y += -I$(LIBDROPBEAR_SRC)
-LIBDROPBEAR_TOMCRYPT_CINCLUDES-y += -I$(LIBDROPBEAR_SRC)/libtomcrypt/src/headers
-LIBDROPBEAR_TOMCRYPT_CINCLUDES-y += -I$(LIBDROPBEAR_SRC)/libtommath
+LIBDROPBEAR_TOMCRYPT_CINCLUDES-y += $(LIBDROPBEAR_TOMMATH_CINCLUDES-y)
 
 ################################################################################
 # Sources
